name:                Reversible
version:             0.1.0.0
synopsis:            Describe reversible functions such that they can be round-tripped
                     back and forth.
description:         Describe reversible functions such that they can be round-tripped
                     back and forth.
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Reversible
                     , Reversible.Iso
  build-depends:       base >=4.7,
                       DSL-Compose
  default-language:    Haskell2010

