cabal-version:       3.8
name:                Reversible
version:             0.1.0.0
synopsis:            Describe reversible functions such that they can be round-tripped
                     back and forth.
description:         Describe reversible functions such that they can be round-tripped
                     back and forth.
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
build-type:          Simple

library
  exposed-modules:     Reversible
                     , Reversible.Iso
  build-depends:       base >= 4.12,
                       DSL-Compose
  default-language:    Haskell2010

  ghc-options: -Wall
